--- a/css/main.css
+++ b/css/main.css
@@ -94,6 +94,10 @@ body, html {
 	background-size: cover;
 }
 
+#main-title-container{
+	height: 40%;
+}
+
 .title{
 	color: #b3a577;
     font-size: 3em;
@@ -101,6 +105,7 @@ body, html {
 	text-align: left;
 	padding-top: 5%;
 	padding-left: 5%;
+	margin-top: 0;
 }
 
 .subtitle span{
@@ -130,18 +135,19 @@ strong{
 .body-container{
 	padding-left: 5%;
 	width: 50%;
+	height: 50%;
 }
 
 footer{
-	margin-top: 2%;
-	height: 11%;
+	
+	height: 10%;
 	background: #906636;
 }
 
 .footer-container{
-	
+	padding-top:1.2%;
 	text-align: center;
-	padding: 1.7%;
+	
 }
 
 .footer-container a{
